@@ -8,8 +8,9 @@
   license:
     identifier: BSD-2-Clause
     uri: http://www.horde.org/licenses/bsd
-  notes: |+
-    
+  notes: |
+    [rla] Turned LogHandler options into classes.
+    |+
 3.0.0alpha4:
   api: 3.0.0alpha1
   state:
